tests/NormalTests/paczka2/big_fuzzy/27136815.err
Error in line 6: PuhFGmPp96 S55 70,3
Error in line 14: ZgRMmN A785 52,1
Error in line 26: 6S9fWJ A785 9,1
Error in line 29: jNR A462 85,6
Error in line 34: ssa S144 18,9
Error in line 40: ssa S55 27,2
Error in line 37: jNR S144 0,3
Error in line 62: jNR A462 85,9
Error in line 81: S144 S144 49,6
Error in line 101: PuhFGmPp96 A785 8,1
Error in line 113: jNR A462 152,9
Error in line 116: jNR A785 5,9
Error in line 100: S144 A462 58,1
Error in line 122: S144 S55 16,5
Error in line 126: S144 A785 91,8
Error in line 136: 3r0QoIgMkRI S144 -1,8
Error in line 115: 3r0QoIgMkRI S144 6,6
Error in line 147: ZgRMmN S144 75,0
Error in line 135: ssa A462 57,5
Error in line 149: ZgRMmN S55 12,8
Error in line 152: ssa A785 48,7
Error in line 157: 3r0QoIgMkRI A785 5,9
Error in line 158: ssa S55 49,2
Error in line 165: jNR A785 90,7
Error in line 144: PuhFGmPp96 S144 99,8
Error in line 200: ssa S55 N55,3
Error in line 197: jNR A462 40,5
Error in line 202: S144 A785 94,9
Error in line 185: ssa S55 57,3
Error in line 218: 6S9fWJ S]44 46,7
Error in line 205: 3r0QoIgMkRI S144 94,6
